--- a/python/katas/_modules/codesignal/launch_sequence_checker.html
+++ b/python/katas/_modules/codesignal/launch_sequence_checker.html
@@ -257,20 +257,22 @@
 
 <div class="viewcode-block" id="launch_sequence_checker">
 <a class="viewcode-back" href="../../codesignal.html#codesignal.launch_sequence_checker.launch_sequence_checker">[docs]</a>
-<span class="k">def</span><span class="w"> </span><span class="nf">launch_sequence_checker</span><span class="p">(</span><span class="n">system_names</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">step_numbers</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">launch_sequence_checker</span><span class="p">(</span><span class="n">system_names</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">steps</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function verifies that all the system sequences are in strictly increasing order.</span>
+<span class="sd">    This function verifies that all the system sequences are in strictly</span>
+<span class="sd">    increasing order.</span>
 
 <span class="sd">    :param system_names: The input list of system names</span>
-<span class="sd">    :param step_numbers: The input list of values</span>
-<span class="sd">    :return: True if all the system sequences are in strictly increasing order, False otherwise</span>
+<span class="sd">    :param steps: The input list of values</span>
+<span class="sd">    :return: True if all the system sequences are in strictly increasing order,</span>
+<span class="sd">        False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">sequences</span> <span class="o">=</span> <span class="n">OrderedDict</span><span class="p">()</span>
     <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">system_names</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">system_names</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="ow">in</span> <span class="n">sequences</span><span class="p">:</span>
-            <span class="n">sequences</span><span class="p">[</span><span class="n">system_names</span><span class="p">[</span><span class="n">idx</span><span class="p">]]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">step_numbers</span><span class="p">[</span><span class="n">idx</span><span class="p">])</span>
+            <span class="n">sequences</span><span class="p">[</span><span class="n">system_names</span><span class="p">[</span><span class="n">idx</span><span class="p">]]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">steps</span><span class="p">[</span><span class="n">idx</span><span class="p">])</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">sequences</span><span class="p">[</span><span class="n">system_names</span><span class="p">[</span><span class="n">idx</span><span class="p">]]</span> <span class="o">=</span> <span class="p">[</span><span class="n">step_numbers</span><span class="p">[</span><span class="n">idx</span><span class="p">]]</span>
+            <span class="n">sequences</span><span class="p">[</span><span class="n">system_names</span><span class="p">[</span><span class="n">idx</span><span class="p">]]</span> <span class="o">=</span> <span class="p">[</span><span class="n">steps</span><span class="p">[</span><span class="n">idx</span><span class="p">]]</span>
     <span class="k">for</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">sequences</span><span class="o">.</span><span class="n">values</span><span class="p">():</span>
         <span class="k">for</span> <span class="n">index</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">value</span><span class="p">)):</span>
             <span class="k">if</span> <span class="n">value</span><span class="p">[</span><span class="n">index</span> <span class="o">-</span> <span class="mi">1</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="n">value</span><span class="p">[</span><span class="n">index</span><span class="p">]:</span>
