--- a/python/katas/_modules/codewars/two_dnas_sequences_coding_for_same_protein.html
+++ b/python/katas/_modules/codewars/two_dnas_sequences_coding_for_same_protein.html
@@ -324,12 +324,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.two_dnas_sequences_coding_for_same_protein.code_for_same_protein">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">code_for_same_protein</span><span class="p">(</span><span class="n">seq1</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">seq2</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns True if the given DNA sequences code for the same protein. If the DNA</span>
-<span class="sd">    sequences do not contain the same number of characters, False is returned.</span>
+<span class="sd">    This function returns True if the given DNA sequences code for the same</span>
+<span class="sd">    protein. If the DNA sequences do not contain the same number of characters,</span>
+<span class="sd">    False is returned.</span>
 
 <span class="sd">    :param seq1: The first DNA sequence, a string</span>
 <span class="sd">    :param seq2: The second DNA sequence, a string</span>
-<span class="sd">    :return: True if the two DNA sequences code for the same protein, False otherwise</span>
+<span class="sd">    :return: True if the two DNA sequences code for the same protein, False</span>
+<span class="sd">        otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">seq1</span><span class="p">)</span> <span class="o">!=</span> <span class="nb">len</span><span class="p">(</span><span class="n">seq2</span><span class="p">):</span>
         <span class="k">return</span> <span class="kc">False</span>
