--- a/python/katas/_modules/codewars/arithmetic_sequence_sum_of_n_elements.html
+++ b/python/katas/_modules/codewars/arithmetic_sequence_sum_of_n_elements.html
@@ -257,16 +257,18 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.arithmetic_sequence_sum_of_n_elements.arithmetic_sequence_sum">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">arithmetic_sequence_sum</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">constant</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">max_length</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function produces an arithmetic sequence of integers, i.e. the difference between one</span>
-<span class="sd">    element in a list and the next element is constant. The list that is returned will be of size</span>
-<span class="sd">    :attr:`max_length`. A ValueError is raised if :attr:`max_length` is less than zero. Each element</span>
-<span class="sd">    in the list is the sum of :attr:`number` and the number of occurrences of :attr:`constant` (the</span>
-<span class="sd">    number of occurrences is equal to the element&#39;s position in the list, and position numbers start</span>
-<span class="sd">    with 0).</span>
+<span class="sd">    This function produces an arithmetic sequence of integers, i.e., the</span>
+<span class="sd">    difference between one element in a list and the next element is constant.</span>
+<span class="sd">    The list that is returned will be of size :attr:`max_length`. A ValueError</span>
+<span class="sd">    is raised if :attr:`max_length` is less than zero. Each element in the list</span>
+<span class="sd">    is the sum of :attr:`number` and the number of occurrences of</span>
+<span class="sd">    :attr:`constant` (the number of occurrences is equal to the element&#39;s</span>
+<span class="sd">    position in the list, and position numbers start with 0).</span>
 
 <span class="sd">    :param number: An integer</span>
 <span class="sd">    :param constant: The integer to add zero or more times with :attr:`number`</span>
-<span class="sd">    :param max_length: The maximum number of integers in the arithmetic sequence</span>
+<span class="sd">    :param max_length: The maximum number of integers in the arithmetic</span>
+<span class="sd">        sequence</span>
 <span class="sd">    :return: The sum of the arithmetic sequence</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">max_length</span> <span class="o">&lt;</span> <span class="mi">0</span><span class="p">:</span>
